[package]
edition = "2021"
name = "b2glinuxhal"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
b2ghald = {git = "https://github.com/capyloon/b2ghald.git"}
log = "0.4"
nserror = {path = "../../../../xpcom/rust/nserror"}
nsstring = {path = "../../../../xpcom/rust/nsstring"}
parking_lot = "0.11"
xpcom = {path = "../../../../xpcom/rust/xpcom"}
