[package]
edition = "2018"
name = "ipfs_handler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cid = "0.7"
libc = "0.2"
log = "0.4"
nserror = {path = "../../../../xpcom/rust/nserror"}
nsstring = {path = "../../../../xpcom/rust/nsstring"}
xpcom = {path = "../../../../xpcom/rust/xpcom"}
